...
    }
    
    func calculateSelectedRoute() {
        guard let route = selectedRouteFinder.findCheapestRoute(from: departureCity,
                                                                to: destinationCity),
              route.count > 0 else {
            showAlert(message: "There are no routes for the selected cities")
            return
        }
        DispatchQueue.main.async { [weak self] in
            guard let self = self else { return }
            self.updateSelectedRoute(route)
            self.updateTotalPrice(for: route)
...
